syntax = "proto3";

option csharp_namespace = "GrpcClient1";

package greet;

// The greeting service definition.
service Greeter {
  // Unary
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

service Test {
	// Bi-directional streaming
	rpc StreamingTestWays (stream ClientRequest) returns (stream ServerResponse);
}

message ClientRequest {
	string name = 1;

}

message ServerResponse {
	string message = 1;
}
